exports[`Count statement > generates statements 1`] = `
5
`;

exports[`Count statement > generates statements 2`] = `
[
  [
    "SELECT COUNT(*) AS COUNT",
    "FROM \`articles\`",
    "WHERE \`articles\`.\`status\` = 'published'"
  ]
]
`;

exports[`Count statement > generates statements 3`] = `
7
`;

exports[`Count statement > generates statements 4`] = `
[
  [
    "SELECT COUNT(*) AS COUNT",
    "FROM \`articles\`"
  ]
]
`;

exports[`Count statement > generates statements 5`] = `
0
`;

exports[`Count statement > generates statements 6`] = `
[
  [
    "SELECT COUNT(*) AS COUNT",
    "FROM \`articles\`",
    "WHERE (",
    "    \`articles\`.\`status\` = 'published'",
    "    AND JSON_SEARCH(",
    "      \`articles\`.\`body\`,",
    "      'one',",
    "      '%my searched content%',",
    "      NULL,",
    "      '$.blocks[*].text'",
    "    ) IS NOT NULL",
    "    AND (",
    "      SELECT COUNT(*)",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    ) > 4",
    "  )"
  ]
]
`;

exports[`Count statement > generates statements 7`] = `
0
`;

exports[`Count statement > generates statements 8`] = `
[
  [
    "SELECT COUNT(*) AS COUNT",
    "FROM \`articles\`",
    "WHERE (",
    "    \`articles\`.\`status\` = 'published'",
    "    AND (",
    "      \`articles\`.\`category_private_id\` IS NOT NULL",
    "      AND \`articles\`.\`category_private_id\` <=> 10",
    "    )",
    "  )"
  ]
]
`;
